Add webhook notification step to Docker workflow, enhance link styling in index.html, and update avatar image

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -58,3 +58,12 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+  notify:
+    needs: [build-and-push]
+    runs-on: ubuntu-latest
+    if: github.event_name != 'pull_request'
+    steps:
+      - name: Trigger Webhook
+        run: |
+          curl -X POST "${{ secrets.WEBHOOK_URL }}"
